@@ -1,5 +1,6 @@
 <b>Version 1.13:</b><br/><br/>
-    &#8226; View users locations, websites, and following status on their profiles<br/>
+    &#8226; View users locations, websites, and following status on user profiles<br/>
+    &#8226; Option to open to in app browser on tweets that contain websites<br/>
     &#8226; Fixes for widget<br/>
     &#8226; Italian and French translations<br/>
 <br/><br/>
